# mlfeel

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
src/mlfeel/: model.py  tokenizer.py  vectorizer.py  vocabulary.py
src/mlfeel/activations/: activation.py
src/mlfeel/losses/: ce.py  loss.py  mse.py
src/mlfeel/optimizers/: adam.py  optim.py
tests/: test_model.py  test_sentiment.py  test_tokenizer.py  test_vectorizer.py  test_vocabulary.py
